# micromesh-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt  cgltf.cmake  eigen.cmake  glad.cmake  imgui.cmake  nativefiledialog.cmake
ext/glad/glad/: glad.c  glad.h
src/baketextures/: CMakeLists.txt  baketextures.cpp  push_pull.h
src/core/: CMakeLists.txt  aabb.h  adjacency.cpp  adjacency.h  ambient_occlusion.cpp  ambient_occlusion.h  bvh.cpp  bvh.h  clean.cpp  clean.h  color.cpp  color.h  curvature.cpp  curvature.h  direction_field.cpp  direction_field.h  flip.cpp  flip.h  geodesic.cpp  geodesic.h  intersection.h  local_operations.cpp  local_operations.h  mesh_io.cpp  mesh_io.h  mesh_io_bary.cpp  mesh_io_bary.h  mesh_io_gltf.cpp  mesh_io_gltf.h  mesh_utils.cpp  mesh_utils.h  micro.cpp  micro.h  quadric.cpp  quadric.h  quality.cpp  quality.h  smooth.cpp  smooth.h  space.h  (+5 more)
src/getattribs/: CMakeLists.txt  getattribs.cpp
src/gui_utils/: CMakeLists.txt  camera.h  font_droidsans.h  gl_utils.cpp  gl_utils.h  gui_controls.cpp  gui_controls.h  shader_strings.h
src/meshexplode/: CMakeLists.txt  meshexplode.cpp
src/meshreduce/: CMakeLists.txt  README.md  TODO  decimation.cpp  decimation.h  decimation_parallel - Copy.cpp  decimation_parallel.cpp  decimation_parallel2.cpp  gui.cpp  gui.h  gui_callback.cpp  gui_widgets.cpp  meshreduce.cpp  session.cpp  session.h
src/shell/: CMakeLists.txt  shell.cpp
src/uvmap/: CMakeLists.txt  uvmap.cpp
src/uvoptimize/: CMakeLists.txt  arap.cpp  arap.h  rectangle_packer.cpp  rectangle_packer.h  uvoptimize.cpp
src/view/: CMakeLists.txt  gui_view.cpp  gui_view.h  gui_view_callback.cpp  gui_view_widgets.cpp  view.cpp
